--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -204,6 +204,7 @@
          be empty.  An example would be "usb.*" -->
     <string-array translatable="false" name="config_tether_usb_regexs">
         <item>"rndis0"</item>
+        <item>"ncm0"</item>
     </string-array>
 
     <!-- List of regexpressions describing the interface (if any) that represent tetherable
